assets/css/home.css
.container {
  max-width: 1400px;
  max-height: 100vh;
  margin-left: auto;
  margin-right: auto;
  padding-left: 6rem;
  padding-right: 6rem;
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  overflow-x: auto;

  header {
    width: 50%;
    position: sticky;
    top: 0;
    padding-top: 6rem;
    padding-bottom: 6rem;
    height: 100vh;

    h1 {
      font-family: "Fira Code", Courier, monospace;
      font-size: 3rem;
      line-height: 1;
      font-weight: 700;
      color: var(--white);
    }

    h2 {
      font-size: 1.5rem;
      line-height: 1.3;
      font-weight: 100;
      margin: 1rem 0;
      color: var(--text-color);
    }

    a {
      svg {
        width: 1.5rem;
        height: 1.5rem;
        fill: var(--white);
        opacity: .7;
        transition: all 0.5s ease;
      }

      &:hover {
        svg {
          opacity: 1;
        }
      }
    }

    ul {
      width: 100%;
      height: auto;
      list-style: none;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: center;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: flex-start;
      margin-top: 6rem;

      li {
        margin-bottom: 1.5rem;

        a {
          color: var(--black);
          font-size: 12px;
          font-weight: 500;
          line-height: 1.5rem;
          text-transform: uppercase;
          color: var(--text-color);
          transition: all 0.5s ease;
          display: flex;
          align-items: center;

          &:before {
            content: "";
            display: inline-block;
            width: 20px;
            height: 1px;
            background-color: var(--text-color);
            margin-right: 10px;
            transition: all 0.5s ease;
          }

          &.active,
          &:hover {
            color: var(--white);
            &:before {
              width: 40px;
              background-color: var(--white);
            }
          }
        }
      }
    }
  }

  main {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 50%;
    gap: 3rem;
    padding: 6rem 0 15rem;

    section#about {
      scroll-margin-top: 6rem;
      padding: 0 1rem;
    }

    section#experience {
      scroll-margin-top: 6rem;

      ul {
        list-style: none;
        display: flex;
        flex-direction: column;
        gap: 1rem;

        li {
          position: relative;
          cursor: pointer;
          transition: all 0.5s ease;

          &:hover {
            border-radius: 8px;
            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
              rgba(0, 0, 0, 0.12) 0px -12px 30px,
              rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
              rgba(0, 0, 0, 0.09) 0px -3px 5px;

            article h3 {
              color: var(--active);

              svg {
                transform: translate(2px, -2px);
                fill: var(--active);
              }
            }
          }

          & > a {
            display: inline-flex;
            justify-content: space-between;
            padding: 1rem 1rem;
            gap: 20px;

            & > p {
              min-width: 6.5rem;
              font-size: 12px;
              text-transform: uppercase;
            }

            article {
              display: flex;
              flex-direction: column;

              h3 {
                font-weight: 500;
                font-size: 16px;
                display: inline-flex;
                align-items: flex-start;
                gap: 0.5rem;

                svg {
                  width: 1rem;
                  height: 1rem;
                  fill: var(--white);
                }
              }

              p {
                font-size: 14px;
              }

              footer {
                margin-top: 0.5rem;
                display: flex;
                flex-wrap: wrap;
                gap: 0.3rem;

                span {
                  padding: 0.2rem 0.6rem;
                  border-radius: 12px;
                  font-size: 12px;
                  font-weight: 400;
                  background-color: rgba(125, 245, 255, 0.1);
                  color: var(--active);
                }
              }
            }
          }

          .card-overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
          }
        }
      }
    }

    section#resume {
      scroll-margin-top: 6rem;
      padding: 0 1rem;

      & > a {
        display: inline-flex;
        gap: 1rem;

        &:hover {
          h3 {
            color: var(--active);
          }

          svg {
            transform: translate(2px, -2px);
            fill: var(--active);
          }
        }

        & h3 {
          font-weight: 500;
          font-size: 16px;
          display: inline-flex;
          align-items: flex-start;
          gap: 0.5rem;
        }

        svg {
          width: 1rem;
          height: 1rem;
          fill: var(--white);
        }
      }
    }
  }
}

.blur-effect {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(
    600px at 1158px 1572px,
    rgba(11, 25, 44, 0.15),
    transparent 80%
  );
  transition: background 0.3s;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  z-index: 3;
  inset: 0;
  pointer-events: none;
}

.disabled {
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.5;
}

.sticky {
  display: none;
}

@keyframes grow {
  0% {
    transform: scale(0.95);
    opacity: 0.8;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

@media (prefers-reduced-motion: no-preference) {
  @supports (animation-timeline: scroll()) {
    #about,
    #resume,
    .card {
      animation: grow linear both;
      animation-timeline: view();
      animation-range: 5vh 50vh;
    }
  }
}

@media (max-width: 1024px) {
  .container {
    padding: 5rem 3rem;
    flex-direction: column;

    header {
      width: 100%;
      position: relative;
      padding-top: 0;
      padding-bottom: 0;

      h2 {
        max-width: 60%;
      }

      ul {
        display: none;
      }
    }

    main {
      display: flex;
      flex-direction: column;
      height: 100%;
      width: 100%;
      gap: 5rem;
      padding: 3rem 0 6rem 0;

      section#about {
        padding: 0;
      }

      section#experience {
        padding: 0;
        position: relative;

        ul li a {
          padding-left: 0;
        }
      }

      section#resume {
        padding: 0;
      }
    }
  }

  .sticky {
    display: block;
    padding: 1.25rem 3rem;
    margin-left: -3rem;
    margin-right: -3rem;
    background-color: var(--background);
    text-transform: uppercase;
    position: sticky;
    top: -5rem;
    color: var(--white);
    font-weight: 600;
    z-index: 2;
  }
}

@media (max-width: 768px) {
  .container {
    padding: 1.25rem 1.5rem;

    header {
      h2 {
        max-width: 90%;
      }
    }
  }

  .sticky {
    display: block;
    top: -1.5rem;
  }
}

